--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,55 +20,30 @@
   /**
    * colors
    */
-
-  /* gradient */
-
-  --bg-gradient-onyx: linear-gradient(
-    to bottom right, 
-    hsl(240, 1%, 25%) 3%, 
-    hsl(0, 0%, 19%) 97%
-  );
-  --bg-gradient-jet: linear-gradient(
-    to bottom right, 
-    hsla(240, 1%, 18%, 0.251) 0%, 
-    hsla(240, 2%, 11%, 0) 100%
-  ), hsl(240, 2%, 13%);
-  --bg-gradient-yellow-1: linear-gradient(
-    to bottom right, 
-    hsl(45, 100%, 71%) 0%, 
-    hsla(36, 100%, 69%, 0) 50%
-  );
-  --bg-gradient-yellow-2: linear-gradient(
-    135deg, 
-    hsla(45, 100%, 71%, 0.251) 0%, 
-    hsla(35, 100%, 68%, 0) 59.86%
-  ), hsl(240, 2%, 13%);
-  --border-gradient-onyx: linear-gradient(
-    to bottom right, 
-    hsl(0, 0%, 25%) 0%, 
-    hsla(0, 0%, 25%, 0) 50%
-  );
-  --text-gradient-yellow: linear-gradient(
-    to right, 
-    hsl(45, 100%, 72%), 
-    hsl(35, 100%, 68%)
-  );
-
-  /* solid */
-
-  --jet: hsl(0, 0%, 22%);
-  --onyx: hsl(240, 1%, 17%);
-  --eerie-black-1: hsl(240, 2%, 13%);
-  --eerie-black-2: hsl(240, 2%, 12%);
-  --smoky-black: hsl(0, 0%, 7%);
-  --white-1: hsl(0, 0%, 100%);
-  --white-2: hsl(0, 0%, 98%);
-  --orange-yellow-crayola: hsl(45, 100%, 72%);
-  --vegas-gold: hsl(45, 54%, 58%);
-  --light-gray: hsl(0, 0%, 84%);
-  --light-gray-70: hsla(0, 0%, 84%, 0.7);
-  --bittersweet-shimmer: hsl(0, 43%, 51%);
-
+   --bg-gradient-onyx: linear-gradient(to bottom right, hsl(240, 76%, 73%), hsl(209, 88%, 73%));
+   --bg-gradient-jet: linear-gradient(to bottom right, hsla(240, 10%, 70%, 0.5), hsl(240, 10%, 40%));
+   --bg-gradient-yellow-1: linear-gradient(to bottom right, hsl(45, 74%, 44%), hsla(45, 70%, 75%, 0.5));
+   --bg-gradient-yellow-2: linear-gradient(to bottom right, hsl(45, 75%, 51%), hsla(45, 70%, 75%, 0.5));
+   --border-gradient-onyx: linear-gradient(to bottom right, hsl(240, 10%, 60%), hsla(240, 10%, 60%, 0.5));
+   --text-gradient-yellow: linear-gradient(to right, hsl(45, 70%, 80%), hsl(35, 70%, 75%));
+ 
+   /* Solid Colors */
+   --jet: hsl(210, 15%, 30%);
+   --onyx: hsl(240, 10%, 27%);
+   --eerie-black-1: hsl(240, 10%, 23%);
+   --eerie-black-2: hsl(240, 10%, 22%);
+   --smoky-black: hsl(0, 0%, 15%);
+   --white-1: hsl(0, 0%, 100%);
+   --white-2: hsl(0, 0%, 98%);
+   --orange-yellow-crayola: hsl(45, 70%, 80%);
+   --vegas-gold: hsl(45, 54%, 70%);
+   --light-gray: hsl(0, 0%, 92%);
+   --light-gray-70: hsla(0, 0%, 92%, 0.7);
+   --bittersweet-shimmer: hsl(0, 43%, 61%);
+ 
+   /* Blue and Aqua Shades (Assuming these are lighter as well) */
+   --light-blue: hsl(200, 70%, 85%); /* Light Blue */
+   --aqua-green: hsl(170, 70%, 75%); /* Aqua Green */
   /**
    * typography
    */
