--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,14 @@
 /*-----------------------------------*\
   #CUSTOM PROPERTY
 \*-----------------------------------*/
+a {
+  text-decoration: none;
+  color: white;
+}
+a:hover {
+  text-decoration: none;
+  color: rgb(110, 80, 243);
+}
 
 :root {
 
